--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,10 @@
 
     <display-name>Topjava</display-name>
 
+    <listener>
+        <listener-class>ru.javawebinar.topjava.web.ContextListener</listener-class>
+    </listener>
+
     <servlet>
         <servlet-name>userServlet</servlet-name>
         <servlet-class>ru.javawebinar.topjava.web.UserServlet</servlet-class>
